<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">



    <ImageView
        android:id="@+id/iv_signup_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:src="@mipmap/dreamember_icon3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signup_name"
        android:layout_below="@+id/iv_signup_logo"
        android:hint="@string/et_signup_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signup_birth_year"
        android:layout_below="@+id/et_signup_name"
        android:hint="@string/et_signup_birth"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signup_email"
        android:layout_below="@+id/et_signup_birth_year"
        android:hint="@string/et_login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signup_pass"
        android:layout_below="@+id/et_signup_email"
        android:hint="@string/et_login_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signup_pass_confirm"
        android:layout_below="@+id/et_signup_pass"
        android:hint="@string/et_signup_pass_confirm"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_sign_up"
        android:layout_below="@id/et_signup_pass_confirm"
        android:text="@string/bt_signup"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_signup_back_to_login"
        android:layout_below="@id/bt_sign_up"
        android:text="@string/tv_back_to_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>