<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/iv_profile_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/dreamember_icon15" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_profile_name"
        android:layout_marginTop="70dp"
        android:hint="@string/et_signup_name"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_profile_birth_year"
        android:layout_below="@+id/et_profile_name"
        android:hint="@string/et_signup_birth"
        android:inputType="numberDecimal"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sleeping_time"
        android:layout_below="@+id/iv_profile_logo"
        android:text="@string/tv_profile_sleeping_time"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dreaming_time"
        android:layout_below="@+id/tv_sleeping_time"
        android:text="@string/tv_profile_dreaming_time"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_profile_bpm"
        android:layout_below="@+id/tv_dreaming_time"
        android:text="@string/tv_profile_bpm"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/iv_profile_graph"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/tv_profile_bpm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/dreamember_graph1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_profile_graph"
        android:layout_below="@id/iv_profile_graph"
        android:text="@string/tv_profile_graph"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>