<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset">


    <ImageView
        android:id="@+id/iv_reset_logo"
        android:layout_width="212dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:src="@mipmap/dreamember_icon3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset_description"
        android:layout_below="@id/iv_reset_logo"
        android:text="@string/tv_reset_description" android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_reset_email"
        android:layout_below="@+id/tv_reset_description"
        android:hint="@string/et_login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_reset"
        android:layout_below="@id/et_reset_email"
        android:text="@string/button_reset"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset_back_to_login"
        android:layout_below="@id/bt_reset"
        android:text="@string/tv_back_to_login"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>