<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_main_app_name"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/tv_main_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:src="@mipmap/dreamember_icon66" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_main_description"
        android:layout_below="@id/iv_main_logo"
        android:text="@string/tv_main_description" android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="70dp"/>

    <Button
        tools:targetApi="23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_dream"
        android:layout_below="@id/tv_main_description"
        android:text="@string/button_dream"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:background="@color/common_google_signin_btn_text_light_default"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_categories"
        android:orientation="horizontal"
        android:layout_below="@+id/bt_dream"
        android:layout_marginVertical="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_profile"
            android:layout_weight="1">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/iv_profile"
                android:src="@mipmap/dreamember_profile"
                android:scaleType="fitCenter"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_main_profile"
                android:layout_below="@+id/iv_profile"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_main_profile"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_tips"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/iv_tips"
                android:src="@mipmap/dreamember_tips"
                android:scaleType="fitCenter"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_main_tips"
                android:layout_below="@+id/iv_tips"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_main_tips"/>



        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>